--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -12,10 +12,15 @@
     "@chakra-ui/react": "^1.6.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@hookform/resolvers": "^2.8.2",
+    "axios": "^0.22.0",
     "framer-motion": "^4",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.17.2",
+    "react-toastify": "^8.0.3",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/react": "17.0.26",
