--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.22.0",
     "framer-motion": "^4",
     "next": "11.1.2",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.17.2",
