--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -15,14 +15,17 @@
     "@hookform/resolvers": "^2.8.2",
     "axios": "^0.22.0",
     "framer-motion": "^4",
+    "leaflet": "^1.7.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.17.2",
+    "react-leaflet": "^3.2.2",
     "react-toastify": "^8.0.3",
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.7.5",
     "@types/react": "17.0.26",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
