--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.17.2",
+    "react-icons": "^4.3.1",
     "react-leaflet": "^3.2.2",
     "react-toastify": "^8.0.3",
     "yup": "^0.32.9"
